--- a/src/frontend/src/app/components/image-sets/image-sets.component.scss
+++ b/src/frontend/src/app/components/image-sets/image-sets.component.scss
@@ -10,3 +10,11 @@
     display: flex;
     justify-content: end;
 }
+
+.image-sets-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 0 20px;
+}
