--- a/src/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/src/frontend/src/app/components/sidebar/sidebar.component.html
@@ -3,6 +3,8 @@
 <mat-menu #menu="matMenu">
   <button mat-menu-item (click)="navigate('/image-sets')">Image sets</button>
   <button mat-menu-item (click)="navigate('/models')">Models</button>
+  <button mat-menu-item (click)="navigate('/defects')">Defects</button>
+
 </mat-menu>
 
 </div>
