--- a/src/frontend/src/app/images-list/images-list.component.scss
+++ b/src/frontend/src/app/images-list/images-list.component.scss
@@ -4,3 +4,11 @@
     gap: 10px;
     flex-wrap: wrap;
 }
+
+
+.select-all-block {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 10px;
+}
