--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div >
     <app-sidebar></app-sidebar>
   </div>
-  <div class=" pt-3 ">
+  <div class=" pt-3 px-3">
     <router-outlet />
   </div>
 </div>
