--- a/src/frontend/src/app/components/models/models.component.scss
+++ b/src/frontend/src/app/components/models/models.component.scss
@@ -4,3 +4,18 @@
     align-items: center;
     margin-bottom: 20px;
 }
+
+.models-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 0 20px;
+}
+
+.imageSetHover {
+    &:hover {
+        cursor: pointer;
+        background-color: #252525 ;
+    }
+}
