--- a/src/frontend/src/app/app.component.scss
+++ b/src/frontend/src/app/app.component.scss
@@ -1,5 +1,12 @@
-.viewport {
-    height: 100vh;
+.main-container {
     background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, .5));
+    height: 100%;
+}
 
+::ng-deep {
+    html, body, app-root {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
 }
